--- a/index.html
+++ b/index.html
@@ -17,57 +17,9 @@
   <div class="main-wrapper">
     <div class="container text-center d-flex flex-column align-items-center pt-5">
       <h1 class="pb-3">OUR TEAM</h1>
-      <p class="px-5">Discover our team members. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, ducimus quasi! At fuga a distinctio.</p>
+      <p class="px-5 pb-3">Discover our team members. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, ducimus quasi! At fuga a distinctio.</p>
 
-      <div class="cards-section d-flex justify-content-between flex-wrap">
-
-        <div class="card mb-5" style="width: 18rem;">
-          <img class="card-img-top" src="img/wayne-barnett-founder-ceo.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          </div>
-        </div>
-
-        <div class="card mb-5" style="width: 18rem;">
-          <img class="card-img-top" src="img/wayne-barnett-founder-ceo.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          </div>
-        </div>
-
-        <div class="card mb-5" style="width: 18rem;">
-          <img class="card-img-top" src="img/wayne-barnett-founder-ceo.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          </div>
-        </div>
-
-        <div class="card mb-5" style="width: 18rem;">
-          <img class="card-img-top" src="img/wayne-barnett-founder-ceo.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          </div>
-        </div>
-
-        <div class="card mb-5" style="width: 18rem;">
-          <img class="card-img-top" src="img/wayne-barnett-founder-ceo.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          </div>
-        </div>
-
-        <div class="card mb-5" style="width: 18rem;">
-          <img class="card-img-top" src="img/wayne-barnett-founder-ceo.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          </div>
-        </div>
+      <div class="cards-container d-flex justify-content-between flex-wrap">
 
 
       </div>
