[edit]:css, aggiustamenti di stile

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
   <div class="main-wrapper">
-    <div class="container text-center d-flex flex-column align-items-center pt-5">
-      <h1 class="pb-3">OUR TEAM</h1>
-      <p class="px-5 pb-3">Discover our team members. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, ducimus quasi! At fuga a distinctio.</p>
+    <div class="container text-center d-flex flex-column align-items-center">
+      <h3 class="pb-1 pt-2 ">OUR TEAM</h3>
+      <p class="px-5">Discover our team members. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, ducimus quasi! At fuga a distinctio.</p>
 
       <div class="cards-container d-flex justify-content-between flex-wrap">
 
